Update edi to latest version

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ stdlibUuidVersion=1.8.0-20240410-145100-af1ecf4
 # Stdlib Level 04
 stdlibAuthVersion=2.11.0-20240410-152000-921da1b
 stdlibDataJsondataVersion=0.1.0-20240410-220600-4b50095
-stdlibEdiVersion=1.0.7-20230831-164800-d8fd1c1
+stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
 stdlibJwtVersion=2.11.0-20240410-151900-e59bad3
 stdlibMqttVersion=1.1.0-20240410-153100-4c795ac
