--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
+stdlibAvroVersion=0.1.1
 stdlibConstraintVersion=1.5.0
 stdlibCryptoVersion=2.7.0-20240410-140300-72e9adb
 stdlibDataXmldataVersion=0.1.0-20240409-100100-f7b8da6
