--- a/gradle.properties
+++ b/gradle.properties
@@ -95,7 +95,7 @@ openapiVersion=1.9.0-20240420-075700-1a86975
 # AsyncAPI Module
 asyncapiVersion=0.8.0-20240420-021200-49b7489
 
-c2cVersion=2.3.2
+c2cVersion=3.0.0-20240420-075600-2035b0e
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
