Update graphqlToolVersion in gradle file

--- a/gradle.properties
+++ b/gradle.properties
@@ -79,7 +79,7 @@ devToolsVersion=1.4.0-20240420-103500-d850d74
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.10.0-20240420-075700-8ced225
+graphqlToolVersion=0.10.0-20240420-075700-8ced225
 
 # Protoc Tool
 protocToolVersion=0.2.0
