Update openapi and asynapitool versions in u9

--- a/gradle.properties
+++ b/gradle.properties
@@ -85,10 +85,10 @@ graphqlToolVersion=0.10.0-20240420-075700-8ced225
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.9.0-20240420-075700-1a86975
+openapiToolVersion=1.9.0-20240420-075700-1a86975
 
 # AsyncAPI Module
-asyncapiVersion=0.8.0-20240420-021200-49b7489
+asyncapiToolVersion=0.8.0-20240420-021200-49b7489
 
 c2cVersion=3.0.0-20240420-075600-2035b0e
 
