--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.0-20240410-095500-2653a74d
+ballerinaLangVersion=2201.9.0-20240419-152500-bd530dd2
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -23,14 +23,14 @@ stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibAvroVersion=0.1.1
+stdlibAvroVersion=0.1.2-20240419-195200-316bb81
 stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.0-20240410-140300-72e9adb
+stdlibCryptoVersion=2.7.0-20240419-184200-7bc2693
 stdlibDataXmldataVersion=0.1.0-20240409-100100-f7b8da6
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
-stdlibPersistVersion=1.3.0-20240409-100100-594c874
+stdlibPersistVersion=1.3.0-20240419-184000-8f2bc69
 stdlibRandomVersion=1.5.0
 stdlibTaskVersion=2.5.0
 stdlibXsltVersion=2.6.0
@@ -41,56 +41,56 @@ stdlibCacheVersion=3.8.0-20240409-101100-e2d7f4e
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.9.1
 stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.10.0-20240410-152800-5c1e336
+stdlibTcpVersion=1.10.0-20240419-212300-bbbdd7a
 stdlibUdpVersion=1.9.2-20240409-135000-f17730b
-stdlibUuidVersion=1.8.0-20240410-145100-af1ecf4
+stdlibUuidVersion=1.8.0-20240419-205800-699c1b6
 
 # Stdlib Level 04
-stdlibAuthVersion=2.11.0-20240410-152000-921da1b
-stdlibDataJsondataVersion=0.1.0-20240410-220600-4b50095
+stdlibAuthVersion=2.11.0-20240419-212200-83c312b
+stdlibDataJsondataVersion=0.1.0-20240419-214600-d9ba31c
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0-20240410-151900-e59bad3
-stdlibMqttVersion=1.1.0-20240410-153100-4c795ac
-stdlibOAuth2Version=2.11.0-20240410-152000-5b650e4
+stdlibJwtVersion=2.11.0-20240419-212200-853ba89
+stdlibMqttVersion=1.1.0-20240419-212100-ad02e34
+stdlibOAuth2Version=2.11.0-20240419-212300-79a26ae
 stdlibTomlVersion=0.5.1
 stdlibYamlVersion=0.5.3
 
 # Stdlib Level 05
-stdlibHttpVersion=2.11.0-20240410-161700-e275cb8
+stdlibHttpVersion=2.11.0-20240419-221600-aa2f91a
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.11.0-20240410-172500-b48998b
-stdlibSoapVersion=0.11.0-20240410-203700-68f4107
-stdlibTransactionVersion=1.9.0-20240410-194000-a082909
-stdlibWebsocketVersion=2.11.0-20240410-173300-a8abbdf
-stdlibWebsubVersion=2.11.0-20240410-194100-a032df4
-stdlibWebsubhubVersion=1.11.0-20240410-194000-a9c543b
+stdlibGrpcVersion=1.11.0-20240419-232400-1d637b4
+stdlibSoapVersion=0.11.0-20240419-232200-c950703
+stdlibTransactionVersion=1.9.0-20240420-020300-e5fd3f0
+stdlibWebsocketVersion=2.11.0-20240419-233300-6085b97
+stdlibWebsubVersion=2.11.0-20240420-020300-5c5c52e
+stdlibWebsubhubVersion=1.11.0-20240420-020200-060dc9f
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.12.0-20240415-181000-9ebb287
-stdlibSqlVersion=1.13.0-20240410-205900-22f19c6
+stdlibGraphqlVersion=1.12.0-20240420-061500-c53712e
+stdlibSqlVersion=1.13.0-20240420-061500-e8afd44
 
 # Persist Tool
-persistToolVersion=1.3.0-20240417-111300-eb2b36a
+persistToolVersion=1.3.0-20240420-100200-586e893
 
 # Dev Tools
-devToolsVersion=1.4.0-20240415-182300-76be9c5
+devToolsVersion=1.4.0-20240420-103500-d850d74
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlToolVersion=0.10.0-20240415-183000-e62693e
+graphqlToolVersion=0.10.0-20240420-075700-8ced225
 
 # Protoc Tool
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiToolVersion=1.9.0-20240410-215000-47b4b8a
+openapiToolVersion=1.9.0-20240420-075700-1a86975
 
 # AsyncAPI Module
-asyncapiToolVersion=0.8.0-20240410-162000-91c4290
+asyncapiToolVersion=0.8.0-20240420-021200-49b7489
 
-c2cVersion=3.0.0-20240410-214400-0e03d41
+c2cVersion=3.0.0-20240420-075600-2035b0e
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
