--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.0-20240503-004000-5b898743
+ballerinaLangVersion=2201.9.0-20240502-141200-0a49fa42
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -24,9 +24,9 @@ stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibAvroVersion=0.1.1
-stdlibCryptoVersion=2.7.0-20240410-140300-72e9adb
-stdlibDataXmldataVersion=0.1.0-20240409-100100-f7b8da6
+stdlibAvroVersion=0.1.2-20240502-174700-8836b80
+stdlibCryptoVersion=2.7.0-20240502-172300-6b356e2
+stdlibDataXmldataVersion=0.1.0-20240502-181600-b8c5161
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
@@ -40,62 +40,62 @@ stdlibCacheVersion=3.8.0-20240409-101100-e2d7f4e
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.9.1
 stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.10.0-20240410-152800-5c1e336
-stdlibUdpVersion=1.9.2-20240409-135000-f17730b
-stdlibUuidVersion=1.8.0-20240410-145100-af1ecf4
+stdlibTcpVersion=1.10.0-20240502-184900-f4fc360
+stdlibUdpVersion=1.10.0-20240502-184800-57c5b99
+stdlibUuidVersion=1.8.0-20240502-184000-71c8d75
 
 # Stdlib Level 04
-stdlibAuthVersion=2.11.0-20240410-152000-921da1b
-stdlibDataJsondataVersion=0.1.0-20240410-220600-4b50095
+stdlibAuthVersion=2.11.0-20240502-184600-96868c0
+stdlibDataJsondataVersion=0.1.0-20240502-192900-814185e
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0-20240410-151900-e59bad3
-stdlibMqttVersion=1.1.0-20240410-153100-4c795ac
-stdlibOAuth2Version=2.11.0-20240410-152000-5b650e4
+stdlibJwtVersion=2.11.0-20240502-184700-00ec094
+stdlibMqttVersion=1.1.0-20240502-190400-81311da
+stdlibOAuth2Version=2.11.0-20240502-185000-b5e4bc8
 stdlibTomlVersion=0.5.1
 stdlibYamlVersion=0.5.3
 
 # Stdlib Level 05
-stdlibHttpVersion=2.11.0-20240410-161700-e275cb8
+stdlibHttpVersion=2.11.0-20240502-194500-bb0bced
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.11.0-20240410-172500-b48998b
-stdlibSoapVersion=0.11.0-20240410-203700-68f4107
-stdlibTransactionVersion=1.9.0-20240410-194000-a082909
-stdlibWebsocketVersion=2.11.0-20240410-173300-a8abbdf
-stdlibWebsubVersion=2.11.0-20240410-194100-a032df4
-stdlibWebsubhubVersion=1.11.0-20240410-194000-a9c543b
+stdlibGrpcVersion=1.11.0-20240502-203100-8ea8b94
+stdlibSoapVersion=1.0.0-20240502-202600-1ca7243
+stdlibTransactionVersion=1.9.0-20240502-204500-58485c0
+stdlibWebsocketVersion=2.11.0-20240502-203500-6f846c5
+stdlibWebsubVersion=2.11.0-20240502-202800-58c11be
+stdlibWebsubhubVersion=1.11.0-20240502-202900-cd2c1e1
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.12.0-20240410-210000-f6ca9b0
-stdlibSqlVersion=1.13.0-20240410-205900-22f19c6
+stdlibGraphqlVersion=1.12.0-20240503-053700-9721262
+stdlibSqlVersion=1.13.0-20240502-234000-648d89f
 
 # Stdlib Level 08
-stdlibPersistVersion=1.3.0-20240409-100100-594c874
+stdlibPersistVersion=1.3.0-20240502-172400-b7ce80f
 
 # Persist Tool
-persistToolVersion=1.3.0-20240410-230800-30e25cd
+persistToolVersion=1.3.0-20240503-092900-66b3eda
 
 # Dev Tools
-devToolsVersion=1.4.0-20240410-233400-7586fc7
+devToolsVersion=1.4.0-20240503-100600-84bfa4a
 ballerinaCommandVersion=1.4.2
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlVersion=0.10.0-20240410-222300-898ef65
+graphqlVersion=0.10.0-20240503-082700-0b2d96d
 
 # Protoc Tool
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.9.0-20240410-215000-47b4b8a
+openapiVersion=1.9.0-20240503-062800-a891703
 
 # AsyncAPI Module
-asyncapiVersion=0.8.0-20240410-162000-91c4290
+asyncapiVersion=0.8.0-20240503-104000-0887266
 
-c2cVersion=3.0.0-20240410-214400-0e03d41
+c2cVersion=3.0.0-20240503-071200-ffe3bc2
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
