Update openAPI version

--- a/gradle.properties
+++ b/gradle.properties
@@ -88,7 +88,7 @@ graphqlToolVersion=0.10.0-20240503-082700-0b2d96d
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiToolVersion=1.9.0-20240503-062800-a891703
+openapiToolVersion=2.0.0
 
 # AsyncAPI Module
 asyncapiToolVersion=0.8.0-20240503-104000-0887266
