Update dependencies with stable versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.0-20240502-141200-0a49fa42
+ballerinaLangVersion=2201.9.0
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -18,71 +18,71 @@ stdlibJavaArraysVersion=1.4.0
 stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 stdlibXmldataVersion=2.7.0
-observeVersion=1.2.3-20240408-194900-a0e331f
+observeVersion=1.2.3
 stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibAvroVersion=0.1.2-20240502-174700-8836b80
+stdlibAvroVersion=0.1.2
 stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.0-20240502-172300-6b356e2
-stdlibDataXmldataVersion=0.1.0-20240502-181600-b8c5161
+stdlibCryptoVersion=2.7.0
+stdlibDataXmldataVersion=0.1.0
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
-stdlibPersistVersion=1.3.0-20240502-172400-b7ce80f
+stdlibPersistVersion=1.3.0
 stdlibRandomVersion=1.5.0
 stdlibTaskVersion=2.5.0
 stdlibXsltVersion=2.6.0
-observeInternalVersion=1.2.2-20240408-195500-1436319
+observeInternalVersion=1.2.2
 
 # Stdlib Level 03
-stdlibCacheVersion=3.8.0-20240409-101100-e2d7f4e
+stdlibCacheVersion=3.8.0
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.9.1
 stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.10.0-20240502-184900-f4fc360
-stdlibUdpVersion=1.10.0-20240502-184800-57c5b99
-stdlibUuidVersion=1.8.0-20240502-184000-71c8d75
+stdlibTcpVersion=1.10.0
+stdlibUdpVersion=1.10.0
+stdlibUuidVersion=1.8.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.11.0-20240502-184600-96868c0
-stdlibDataJsondataVersion=0.1.0-20240502-192900-814185e
+stdlibAuthVersion=2.11.0
+stdlibDataJsondataVersion=0.1.0
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0-20240502-184700-00ec094
-stdlibMqttVersion=1.1.0-20240502-190400-81311da
-stdlibOAuth2Version=2.11.0-20240502-185000-b5e4bc8
+stdlibJwtVersion=2.11.0
+stdlibMqttVersion=1.1.0
+stdlibOAuth2Version=2.11.0
 stdlibTomlVersion=0.5.1
 stdlibYamlVersion=0.5.3
 
 # Stdlib Level 05
-stdlibHttpVersion=2.11.0-20240502-194500-bb0bced
+stdlibHttpVersion=2.11.0
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.11.0-20240502-203100-8ea8b94
-stdlibSoapVersion=1.0.0-20240502-202600-1ca7243
-stdlibTransactionVersion=1.9.0-20240502-204500-58485c0
-stdlibWebsocketVersion=2.11.0-20240502-203500-6f846c5
-stdlibWebsubVersion=2.11.0-20240502-202800-58c11be
-stdlibWebsubhubVersion=1.11.0-20240502-202900-cd2c1e1
+stdlibGrpcVersion=1.11.0
+stdlibSoapVersion=1.0.0
+stdlibTransactionVersion=1.9.0
+stdlibWebsocketVersion=2.11.0
+stdlibWebsubVersion=2.11.0
+stdlibWebsubhubVersion=1.11.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.12.0-20240503-053700-9721262
-stdlibSqlVersion=1.13.0-20240502-234000-648d89f
+stdlibGraphqlVersion=1.12.0
+stdlibSqlVersion=1.13.0
 
 # Persist Tool
-persistToolVersion=1.3.0-20240503-092900-66b3eda
+persistToolVersion=1.3.0
 
 # Dev Tools
-devToolsVersion=1.4.0-20240503-100600-84bfa4a
+devToolsVersion=1.4.0
 ballerinaCommandVersion=1.4.2
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlToolVersion=0.10.0-20240503-082700-0b2d96d
+graphqlToolVersion=0.10.0
 
 # Protoc Tool
 protocToolVersion=0.2.0
@@ -91,10 +91,10 @@ protocToolVersion=0.2.0
 openapiToolVersion=2.0.0
 
 # AsyncAPI Module
-asyncapiToolVersion=0.8.0-20240503-104000-0887266
+asyncapiToolVersion=0.8.0
 
-c2cVersion=3.0.0-20240503-071200-ffe3bc2
+c2cVersion=3.0.0
 
-dataMapperVersion=2.2.1-20230831-150600-0e37f32
+dataMapperVersion=2.2.0
 
 installerVersion=69c0a0e-9c6a-4062-ae1e-2209c25e4f51
