Update http version

--- a/gradle.properties
+++ b/gradle.properties
@@ -53,7 +53,7 @@ stdlibTomlVersion=0.5.0
 stdlibYamlVersion=0.5.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.10.13-20240327-141300-ecd1355
+stdlibHttpVersion=2.10.13
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.10.6
