--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.9.0
+version=2201.9.1-SNAPSHOT
 codeName=swan-lake
 
 ballerinaLangVersion=2201.9.1
@@ -23,10 +23,10 @@ stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibAvroVersion=0.1.2
+stdlibAvroVersion=1.0.0
 stdlibConstraintVersion=1.5.0
 stdlibCryptoVersion=2.7.0
-stdlibDataXmldataVersion=0.1.0
+stdlibDataXmldataVersion=0.1.1
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
@@ -50,7 +50,7 @@ stdlibAuthVersion=2.11.0
 stdlibDataJsondataVersion=0.1.0
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0
+stdlibJwtVersion=2.12.1
 stdlibMqttVersion=1.1.0
 stdlibOAuth2Version=2.11.0
 stdlibTomlVersion=0.5.1
