--- a/gradle.properties
+++ b/gradle.properties
@@ -63,7 +63,7 @@ stdlibWebsubVersion=2.10.0
 stdlibWebsubhubVersion=1.10.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.11.1-20240322-102100-d659afb
+stdlibGraphqlVersion=1.11.1
 stdlibSqlVersion=1.11.1
 
 # Stdlib Level 08
@@ -73,11 +73,11 @@ stdlibPersistVersion=1.2.0
 persistToolVersion=1.2.2
 
 # Dev Tools
-devToolsVersion=1.3.3-20240329-133900-def0960
+devToolsVersion=1.3.3
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.9.1-20240329-134500-ad6b1f2
+graphqlVersion=0.9.1
 # Protoc Tool
 protocToolVersion=0.2.0
 
