Update ballerinai-transaction version

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,7 +57,7 @@ stdlibHttpVersion=2.10.14
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.10.8
-stdlibTransactionVersion=1.8.1
+stdlibTransactionVersion=1.8.2-20240626-165800-9c25da9
 stdlibWebsocketVersion=2.10.2
 stdlibWebsubVersion=2.10.0
 stdlibWebsubhubVersion=1.10.0
