Update lang and std-lib stable versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.7-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.7-20240624-105200-c1cf9cba
+ballerinaLangVersion=2201.8.7
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -57,7 +57,7 @@ stdlibHttpVersion=2.10.14
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.10.8
-stdlibTransactionVersion=1.8.2-20240626-165800-9c25da9
+stdlibTransactionVersion=1.8.2
 stdlibWebsocketVersion=2.10.2
 stdlibWebsubVersion=2.10.0
 stdlibWebsubhubVersion=1.10.0
