--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.2-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.1
+ballerinaLangVersion=2201.9.2-20240705-215400-2a016c1e
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
