--- a/gradle.properties
+++ b/gradle.properties
@@ -88,7 +88,7 @@ graphqlToolVersion=0.10.0
 protocToolVersion=0.3.0
 
 # OpenAPI Module
-openapiToolVersion=2.0.1
+openapiToolVersion=2.0.3-20240709-094600-a532dc4
 
 # AsyncAPI Module
 asyncapiToolVersion=0.8.0
