Update dependency versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.2-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.2-20240708-193600-7df6361a
+ballerinaLangVersion=2201.9.2
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -88,7 +88,7 @@ graphqlToolVersion=0.10.0
 protocToolVersion=0.3.0
 
 # OpenAPI Module
-openapiToolVersion=2.0.3-20240709-094600-a532dc4
+openapiToolVersion=2.0.3
 
 # AsyncAPI Module
 asyncapiToolVersion=0.8.0
