--- a/examples/http-access-logs/Config.toml
+++ b/examples/http-access-logs/Config.toml
@@ -1,5 +1,9 @@
 [ballerina.http.accessLogConfig]
 # Enable printing access logs on the Console. The default value is `false`.
 console = true
+# Specify the format of access logs. Options are `flat` or `json`. The default value is `flat`.
+format = "flat"
+# List of attributes to include in the access logs. This field is optional.
+attributes = ["ip", "date_time", "request", "status", "response_body_size", "http_referrer", "http_user_agent"]
 # Specify the file path to save the access logs. This is optional.  
 path = "testAccessLog.txt"
