Update ballerina lang version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.2
+ballerinaLangVersion=2201.9.3-20240716-093100-661ea753
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
