--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,7 @@ stdlibMqttVersion=1.1.1
 stdlibOAuth2Version=2.11.0
 stdlibTomlVersion=0.5.1
 stdlibYamlVersion=0.5.3
+stdlibDataCsvVersion=0.1.0
 
 # Stdlib Level 05
 stdlibHttpVersion=2.11.1
