Update http timestamp version

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,7 +57,7 @@ stdlibTomlVersion=0.5.1
 stdlibYamlVersion=0.5.3
 
 # Stdlib Level 05
-stdlibHttpVersion=2.11.1
+stdlibHttpVersion=2.12.0-20240801-081400-0b676d6
 
 # Stdlib Level 06
 stdlibGrpcVersion=1.11.1
