Update crypto, jwt and mime versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ stdlibMathVectorVersion=1.0.2
 # Stdlib Level 02
 stdlibAvroVersion=1.0.0
 stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.0
+stdlibCryptoVersion=2.7.2
 stdlibDataXmldataVersion=0.1.4
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
@@ -40,7 +40,7 @@ observeInternalVersion=1.2.2
 stdlibCacheVersion=3.8.0
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.10.1
-stdlibMimeVersion=2.9.0
+stdlibMimeVersion=2.10.0-20240724-124600-f193322
 stdlibTcpVersion=1.10.0
 stdlibUdpVersion=1.10.0
 stdlibUuidVersion=1.8.0
@@ -50,7 +50,7 @@ stdlibAuthVersion=2.11.0
 stdlibDataJsondataVersion=0.1.0
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0
+stdlibJwtVersion=2.12.1
 stdlibMqttVersion=1.1.1
 stdlibOAuth2Version=2.11.0
 stdlibTomlVersion=0.5.1
