Add data.yaml module to the distribution

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,7 @@ stdlibUuidVersion=1.8.0
 # Stdlib Level 04
 stdlibAuthVersion=2.11.0
 stdlibDataJsondataVersion=0.1.0
+stdlibDataYamlVersion=0.1.0-20240802-131800-0659427
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
 stdlibJwtVersion=2.11.0
