--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ stdlibMathVectorVersion=1.0.2
 stdlibAvroVersion=1.0.0
 stdlibConstraintVersion=1.5.0
 stdlibCryptoVersion=2.7.0
-stdlibDataXmldataVersion=0.1.4
+stdlibDataXmldataVersion=1.0.0-20240805-145400-f67cd0a
 stdlibLogVersion=2.9.0
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
@@ -47,7 +47,7 @@ stdlibUuidVersion=1.8.0
 
 # Stdlib Level 04
 stdlibAuthVersion=2.11.0
-stdlibDataJsondataVersion=0.1.0
+stdlibDataJsondataVersion=0.2.0-20240805-145400-1271c96
 stdlibDataYamlVersion=0.1.0-20240805-142200-476565f
 stdlibEdiVersion=1.2.0
 stdlibEmailVersion=2.9.0
