--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ stdlibUrlVersion=2.4.0
 stdlibXmldataVersion=2.7.0
 observeVersion=1.2.3
 stdlibMathVectorVersion=1.0.2
-
+stdlibLdapVersion=1.0.0
 
 # Stdlib Level 02
 stdlibAvroVersion=1.0.0
