Update dependency versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,12 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibIoVersion=1.6.0
+stdlibIoVersion=1.6.1
 stdlibJavaArraysVersion=1.4.0
 stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 stdlibXmldataVersion=2.7.0
-observeVersion=1.2.3
+observeVersion=1.3.0-20240807-093200-e29ca7a
 stdlibMathVectorVersion=1.0.2
 stdlibLdapVersion=1.0.0
 
@@ -27,51 +27,51 @@ stdlibLdapVersion=1.0.0
 stdlibAvroVersion=1.0.0
 stdlibConstraintVersion=1.5.0
 stdlibCryptoVersion=2.7.0
-stdlibDataXmldataVersion=1.0.0-20240805-145400-f67cd0a
-stdlibLogVersion=2.9.0
+stdlibDataXmldataVersion=1.0.0-20240807-112700-58e6b2e
+stdlibLogVersion=2.10.0-20240807-203000-b85cfb9
 stdlibOsVersion=1.8.0
 stdlibProtobufVersion=1.6.0
-stdlibPersistVersion=1.3.0
+stdlibPersistVersion=1.4.0-20240808-102300-3b855e5
 stdlibRandomVersion=1.5.0
 stdlibTaskVersion=2.5.0
 stdlibXsltVersion=2.6.0
-observeInternalVersion=1.2.2
+observeInternalVersion=1.3.0-20240807-094500-91e2d3a
 
 # Stdlib Level 03
 stdlibCacheVersion=3.8.0
-stdlibFileVersion=1.9.0
-stdlibFtpVersion=2.10.1
-stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.10.0
-stdlibUdpVersion=1.10.0
+stdlibFileVersion=1.10.0-20240807-205900-a4d66bb
+stdlibFtpVersion=2.11.0-20240807-205800-1cad899
+stdlibMimeVersion=2.10.0-20240807-205100-2728cdc
+stdlibTcpVersion=1.11.0-20240807-210000-f59218d
+stdlibUdpVersion=1.11.0-20240807-205900-6c9a844
 stdlibUuidVersion=1.8.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.11.0
-stdlibDataJsondataVersion=0.2.0-20240805-145400-1271c96
+stdlibAuthVersion=2.12.0-20240807-214700-37b31bb
+stdlibDataJsondataVersion=0.2.0-20240807-224500-d31539b
 stdlibDataYamlVersion=0.1.0-20240807-112000-b0a67ad
-stdlibEdiVersion=1.2.0
-stdlibEmailVersion=2.9.0
-stdlibJwtVersion=2.11.0
-stdlibMqttVersion=1.1.1
-stdlibOAuth2Version=2.11.0
-stdlibTomlVersion=0.5.1
-stdlibYamlVersion=0.5.3
+stdlibEdiVersion=1.3.0-20240808-145600-6ee8ef8
+stdlibEmailVersion=2.10.0-20240807-214800-06a3fe5
+stdlibJwtVersion=2.13.0-20240809-095500-b9d03ed
+stdlibMqttVersion=1.2.0-20240807-214800-026fa3f
+stdlibOAuth2Version=2.12.0-20240807-220200-7f7294b
+stdlibTomlVersion=0.6.0-20240808-100500-48de492
+stdlibYamlVersion=0.6.0-20240808-145600-47a4b09
 
 # Stdlib Level 05
-stdlibHttpVersion=2.11.1
+stdlibHttpVersion=2.12.0-20240809-111500-91b1ccd
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.11.1
-stdlibSoapVersion=1.0.0
-stdlibTransactionVersion=1.9.0
-stdlibWebsocketVersion=2.11.0
-stdlibWebsubVersion=2.11.0
-stdlibWebsubhubVersion=1.11.0
+stdlibGrpcVersion=1.12.0-20240809-125800-0b4a6a7
+stdlibSoapVersion=1.1.0-20240809-130500-7cdbd17
+stdlibTransactionVersion=1.10.0-20240809-131000-44ec1bf
+stdlibWebsocketVersion=2.12.0-20240809-131100-62b3d4f
+stdlibWebsubVersion=2.12.0-20240809-141900-6da2c05
+stdlibWebsubhubVersion=1.12.0-20240809-145300-5c3d48f
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.14.0-20240801-114000-e4337a2
-stdlibSqlVersion=1.13.0
+stdlibGraphqlVersion=1.14.0-20240809-155800-d79bf35
+stdlibSqlVersion=1.14.0-20240809-142900-0689c89
 
 # Persist Tool
 persistToolVersion=1.3.0
@@ -84,16 +84,16 @@ ballerinaCommandVersion=1.4.2
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlToolVersion=0.10.0
+graphqlToolVersion=0.11.0-20240809-162000-0507ddf
 
 # Protoc Tool
 protocToolVersion=0.3.0
 
 # OpenAPI Module
-openapiToolVersion=2.0.0
+openapiToolVersion=2.1.0-20240809-172800-92dcfd0
 
 # AsyncAPI Module
-asyncapiToolVersion=0.8.0
+asyncapiToolVersion=0.9.0-20240809-172800-9514d22
 
 c2cVersion=3.0.0
 
