Update stable versions for 2201.9.3 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.3-20240808-150800-cf5d646c
+ballerinaLangVersion=2201.9.3
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -62,7 +62,7 @@ stdlibHttpVersion=2.11.3
 # Stdlib Level 06
 stdlibGrpcVersion=1.11.1
 stdlibSoapVersion=1.0.0
-stdlibTransactionVersion=1.9.1-20240808-184900-4bb6e58
+stdlibTransactionVersion=1.9.1
 stdlibWebsocketVersion=2.11.0
 stdlibWebsubVersion=2.11.0
 stdlibWebsubhubVersion=1.11.0
