Update persist tool, crypto version

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ stdlibLdapVersion=1.0.0
 # Stdlib Level 02
 stdlibAvroVersion=1.0.0
 stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.0
+stdlibCryptoVersion=2.7.2
 stdlibDataXmldataVersion=1.0.0-20240807-112700-58e6b2e
 stdlibLogVersion=2.10.0-20240807-203000-b85cfb9
 stdlibOsVersion=1.8.0
@@ -74,7 +74,7 @@ stdlibGraphqlVersion=1.14.0-20240809-155800-d79bf35
 stdlibSqlVersion=1.14.0-20240809-142900-0689c89
 
 # Persist Tool
-persistToolVersion=1.3.0
+persistToolVersion=1.4.0-20240810-075600-b104175
 
 # Dev Tools
 devToolsVersion=1.4.0
