--- a/gradle.properties
+++ b/gradle.properties
@@ -77,7 +77,7 @@ stdlibSqlVersion=1.14.0-20240809-142900-0689c89
 persistToolVersion=1.4.0-20240810-075600-b104175
 
 # Dev Tools
-devToolsVersion=1.4.0
+devToolsVersion=1.5.0-20240810-220200-7827843
 ballerinaCommandVersion=1.4.2
 
 # API Doc UI
@@ -95,6 +95,6 @@ openapiToolVersion=2.1.0-20240809-172800-92dcfd0
 # AsyncAPI Module
 asyncapiToolVersion=0.9.0-20240809-172800-9514d22
 
-c2cVersion=3.0.0
+c2cVersion=3.1.0-20240810-212400-ed6bd75
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
