--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ stdlibProtobufVersion=1.6.0
 stdlibPersistVersion=1.4.0-20240808-102300-3b855e5
 stdlibRandomVersion=1.5.0
 stdlibTaskVersion=2.5.0
-stdlibXsltVersion=2.6.0
+stdlibXsltVersion=2.7.0-20240813-135800-02ad89a
 observeInternalVersion=1.3.0-20240807-094500-91e2d3a
 
 # Stdlib Level 03
