--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -235,6 +235,7 @@ jobs:
           packageUser: ${{ github.actor }}
           packagePAT: ${{ secrets.GITHUB_TOKEN }}
           devCentralToken: ${{ secrets.BALLERINA_CENTRAL_DEV_ACCESS_TOKEN }}
+          prodCentralToken: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
           ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
           TEST_MODE_ACTIVE: true
         run: ./gradlew :project-api-tests:test --stacktrace --scan --console=plain --no-daemon --continue
