Update persist tool and dev tools dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -73,10 +73,10 @@ stdlibGraphqlVersion=1.14.0
 stdlibSqlVersion=1.14.0
 
 # Persist Tool
-persistToolVersion=1.4.0-20240814-194900-d6e847f
+persistToolVersion=1.4.0
 
 # Dev Tools
-devToolsVersion=1.5.0-20240814-211500-779deb8
+devToolsVersion=1.5.0
 ballerinaCommandVersion=1.4.2
 
 # API Doc UI
