--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ stdlibJavaArraysVersion=1.4.0
 stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 stdlibXmldataVersion=2.8.0
-observeVersion=1.3.0-20240814-114100-0f71e1e
+observeVersion=1.3.0
 stdlibMathVectorVersion=1.0.2
 stdlibLdapVersion=1.0.1
 
