--- a/gradle.properties
+++ b/gradle.properties
@@ -94,6 +94,6 @@ openapiToolVersion=2.1.0
 # AsyncAPI Module
 asyncapiToolVersion=0.9.0
 
-c2cVersion=3.1.0-20240814-182100-cd05a6f
+c2cVersion=3.1.0
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
