Update lang timestamp

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.4-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.3
+ballerinaLangVersion=2201.9.4-20240816-221000-362fba7c
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
