--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.8-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.8-20240826-095200-ee993618
+ballerinaLangVersion=2201.8.8
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
