--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -343,6 +343,11 @@ task packageDist(type: Zip) {
     into("${parentDir}/bre/lib") {
         from configurations.exten
     }
+    /* LS package index */
+    into("${parentDir}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
+    }
 
     doLast {
         println 'Ballerina Tools Distribution Packaged'
@@ -428,6 +433,12 @@ task packageDistZip(type: Zip) {
     into("${parentDir}/distributions/ballerina-${shortVersion}/bre/lib") {
         from configurations.exten
     }
+    /* LS package index */
+    into("${parentDir}/distributions/ballerina-${shortVersion}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
+    }
+
 
     doLast {
         println 'Ballerina Distribution Packaged'
@@ -517,6 +528,12 @@ task packageDistLinux(type: Zip) {
     into("${parentDir}/distributions/ballerina-${shortVersion}/bre/lib") {
         from configurations.exten
     }
+    /* LS package index */
+    into("${parentDir}/distributions/ballerina-${shortVersion}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
+    }
+
 
     doLast {
         println 'Ballerina Linux Distribution Packaged'
@@ -601,6 +618,11 @@ task packageDistMac(type: Zip) {
     /* Dependencies */
     into("${parentDir}/distributions/ballerina-${shortVersion}/bre/lib") {
         from configurations.exten
+    }
+    /* LS package index */
+    into("${parentDir}/distributions/ballerina-${shortVersion}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
     }
 
     doLast {
@@ -687,6 +709,12 @@ task packageDistMacArm(type: Zip) {
     into("${parentDir}/distributions/ballerina-${shortVersion}/bre/lib") {
         from configurations.exten
     }
+    /* LS package index */
+    into("${parentDir}/distributions/ballerina-${shortVersion}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
+    }
+
 
     doLast {
         println 'Ballerina MacOS-ARM Distribution Packaged'
@@ -763,6 +791,12 @@ task packageDistWindows(type: Zip) {
     into("${parentDir}/distributions/ballerina-${shortVersion}/bre/lib") {
         from configurations.exten
     }
+    /* LS package index */
+    into("${parentDir}/distributions/ballerina-${shortVersion}/resources/ls-index") {
+        from "../resources/ls-index"
+        fileMode = 0444
+    }
+
 
     doLast {
         println 'Ballerina Windows Distribution Packaged'
