--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.1-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.0
+ballerinaLangVersion=2201.10.1-20240926-152100-5382e89b
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -58,7 +58,7 @@ stdlibTomlVersion=0.6.0
 stdlibYamlVersion=0.6.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.12.1
+stdlibHttpVersion=2.12.0
 
 
 # Stdlib Level 06
