--- a/.trivyignore
+++ b/.trivyignore
@@ -15,3 +15,6 @@ CVE-2024-21742
 # Fixed version is released yet
 CVE-2023-33201
 CVE-2023-33202 
+
+# Temporarily disabled until all libraries are updated
+CVE-2024-7254
