Add version changes for 2201.10.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.1-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.1-20240926-152100-5382e89b
+ballerinaLangVersion=2201.10.1
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -29,7 +29,7 @@ stdlibCryptoVersion=2.7.2
 stdlibDataXmldataVersion=1.0.0
 stdlibLogVersion=2.10.0
 stdlibOsVersion=1.8.0
-stdlibProtobufVersion=1.6.0
+stdlibProtobufVersion=1.6.1
 stdlibPersistVersion=1.4.0
 stdlibRandomVersion=1.5.0
 stdlibTaskVersion=2.5.0
@@ -41,7 +41,7 @@ stdlibCacheVersion=3.8.0
 stdlibFileVersion=1.10.0
 stdlibFtpVersion=2.11.0
 stdlibMimeVersion=2.10.0
-stdlibTcpVersion=1.11.0
+stdlibTcpVersion=1.11.1
 stdlibUdpVersion=1.11.0
 stdlibUuidVersion=1.8.0
 
@@ -58,11 +58,11 @@ stdlibTomlVersion=0.6.0
 stdlibYamlVersion=0.6.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.12.0
+stdlibHttpVersion=2.12.1
 
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.12.0
+stdlibGrpcVersion=1.12.1
 stdlibSoapVersion=1.1.0
 stdlibTransactionVersion=1.10.0
 stdlibWebsocketVersion=2.12.0
