--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.9.4-SNAPSHOT
+version=2201.9.4-20240926-164800-53fa5070
 codeName=swan-lake
 
 ballerinaLangVersion=2201.9.4-20240816-221000-362fba7c
@@ -41,7 +41,7 @@ stdlibCacheVersion=3.8.0
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.10.1
 stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.10.0
+stdlibTcpVersion=1.10.1
 stdlibUdpVersion=1.10.0
 stdlibUuidVersion=1.8.0
 
