--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.9.4-20240926-164800-53fa5070
+version=2201.9.4-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.4-20240816-221000-362fba7c
+ballerinaLangVersion=2201.9.4-20240926-164800-53fa5070
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
