Update lang version to 2201.9.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.4-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.4-20240926-164800-53fa5070
+ballerinaLangVersion=2201.9.4
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
