--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.2-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.1
+ballerinaLangVersion=2201.10.2-20241010-103700-9f90d042
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -23,7 +23,7 @@ stdlibMathVectorVersion=1.0.2
 stdlibLdapVersion=1.0.1
 
 # Stdlib Level 02
-stdlibAvroVersion=1.0.0
+stdlibAvroVersion=1.0.1
 stdlibConstraintVersion=1.5.0
 stdlibCryptoVersion=2.7.2
 stdlibDataXmldataVersion=1.0.0
