--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -391,6 +391,7 @@ task packageDistZip(type: Zip) {
         from "build/target/extracted-distributions/jballerina-tools-zip/jballerina-tools-${ballerinaLangVersion}"
         exclude "distributions/ballerina-version"
         exclude "distributions/installer-version"
+        exclude "/bin/bal.windows.gitbash"
         exclude "/bin/version.txt"
         exclude "/LICENSE"
 
@@ -477,6 +478,7 @@ task packageDistLinux(type: Zip) {
         exclude "distributions/ballerina-version"
         exclude "distributions/installer-version"
         exclude "/bin/bal.bat"
+        exclude "/bin/bal.windows.gitbash"
         exclude "/bin/version.txt"
         exclude "/LICENSE"
     }
@@ -567,6 +569,7 @@ task packageDistMac(type: Zip) {
         exclude "distributions/ballerina-version"
         exclude "distributions/installer-version"
         exclude "/bin/bal.bat"
+        exclude "/bin/bal.windows.gitbash"
         exclude "/bin/version.txt"
         exclude "/LICENSE"
     }
