Update the lang version for 10.2 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.2-20241010-103700-9f90d042
+ballerinaLangVersion=2201.10.2
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
