--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -351,7 +351,7 @@ jobs:
       - name: Archive Linux deb Hashes
         uses: actions/upload-artifact@v4
         with:
-          name: Linux deb Hashes
+          name: Linux-ARM deb Hashes
           path: ballerina-${{ needs.ubuntu-build.outputs.project-version }}-linux-arm-x64.deb.sha256
 
   macos-installer-build:
