--- a/.github/workflows/publish_release_bi.yml
+++ b/.github/workflows/publish_release_bi.yml
@@ -28,6 +28,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17.0.7'
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.22.1'
       - name: Clone ballerina-dev-tools
         run: git clone -b flow_model https://github.com/ballerina-platform/ballerina-dev-tools.git
       - name: Build ballerina-dev-tools
