--- a/.github/workflows/publish_release_bi.yml
+++ b/.github/workflows/publish_release_bi.yml
@@ -55,7 +55,7 @@ jobs:
           LANG_VERSION=$((grep -w "ballerinaLangVersion" | cut -d= -f2 | cut -d- -f1 | xargs) < gradle.properties)
           CODE_NAME=$((grep -w 'codeName' | cut -d= -f2) < gradle.properties)
           RELEASE_VERSION=$DIST_VERSION
-          TAGGED_VERSION=$RELEASE_VERSION-$(TZ="Asia/Kolkata" date +'%Y%m%d-%H%M00')
+          TAGGED_VERSION=$RELEASE_VERSION-bi-pack-$(TZ="Asia/Kolkata" date +'%Y%m%d-%H%M00')
           LONG_VERSION=$DIST_VERSION-$CODE_NAME
           echo VERSION=$RELEASE_VERSION >> $GITHUB_ENV
           echo GIT_TAG=$TAGGED_VERSION >> $GITHUB_ENV
