Update lang timestamp version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.5-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.4
+ballerinaLangVersion=2201.9.5-20241105-074700-3ed166de
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
