--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,6 +7,7 @@ on:
             - ballerina-1.1.x
             - ballerina-1.2.x
             - 2201.[0-9]+.x
+            - java21
 
 jobs:
     ubuntu-integration-tests:
@@ -18,11 +19,11 @@ jobs:
         steps:
             -   name: Checkout Repository
                 uses: actions/checkout@v3
-            -   name: Set up JDK 17
+            -   name: Set up JDK 21
                 uses: actions/setup-java@v3
                 with:
                     distribution: 'temurin'
-                    java-version: '17.0.7'
+                    java-version: '21.0.3'
             -   name: Build Ballerina Distribution
                 env:
                     packageUser: ${{ github.actor }}
@@ -41,11 +42,11 @@ jobs:
         steps:
             -   name: Checkout Repository
                 uses: actions/checkout@v3
-            -   name: Set up JDK 17
+            -   name: Set up JDK 21
                 uses: actions/setup-java@v3
                 with:
                     distribution: 'temurin'
-                    java-version: '17.0.7'
+                    java-version: '21.0.3'
             -   name: Build Ballerina Distribution
                 env:
                     packageUser: ${{ github.actor }}
@@ -63,11 +64,11 @@ jobs:
         steps:
             -   name: Checkout Repository
                 uses: actions/checkout@v3
-            -   name: Set up JDK 17
+            -   name: Set up JDK 21
                 uses: actions/setup-java@v3
                 with:
                     distribution: 'temurin'
-                    java-version: '17.0.7'
+                    java-version: '21.0.3'
             - name: Build Ballerina Distribution
               env:
                   packageUser: ${{ github.actor }}
