--- a/gradle.properties
+++ b/gradle.properties
@@ -90,7 +90,7 @@ graphqlToolVersion=0.11.0
 protocToolVersion=0.3.1
 
 # OpenAPI Module
-openapiToolVersion=2.1.0
+openapiToolVersion=2.1.1-20241118-181300-2026576
 
 # AsyncAPI Module
 asyncapiToolVersion=0.9.0
