Fix too many request error in trivy scan

--- a/.github/workflows/daily-build-2201.10.x.yml
+++ b/.github/workflows/daily-build-2201.10.x.yml
@@ -157,6 +157,9 @@ jobs:
             BALLERINA_DIST=ballerina-${{ steps.project-version.outputs.sversion }}.zip
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
+        env:
+          TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-java-db,public.ecr.aws/aquasecurity/trivy-java-db
         with:
           image-ref: 'ballerina/ballerina:nightly-test'
           skip-dirs: 'ballerina/runtime/examples'
@@ -187,6 +190,9 @@ jobs:
             BALLERINA_DIST=ballerina-${{ steps.project-version.outputs.version }}-linux-x64.deb
       - name: Run Trivy vulnerability scanner for dev container docker image
         uses: aquasecurity/trivy-action@master
+        env:
+          TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-java-db,public.ecr.aws/aquasecurity/trivy-java-db
         with:
           image-ref: 'ballerina/ballerina-devcontainer:nightly-test'
           skip-dirs: 'ballerina/runtime/examples'
