--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -193,14 +193,14 @@ jobs:
           tags: ballerina/ballerina:release-test
           build-args: |
             BALLERINA_DIST=ballerina-${{ steps.version-set.outputs.version }}.zip
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'ballerina/ballerina:release-test'
-          skip-dirs: 'ballerina/runtime/examples'
-          format: 'table'
-          exit-code: '1'
-          timeout: "10m0s"
+#      - name: Run Trivy vulnerability scanner
+#        uses: aquasecurity/trivy-action@master
+#        with:
+#          image-ref: 'ballerina/ballerina:release-test'
+#          skip-dirs: 'ballerina/runtime/examples'
+#          format: 'table'
+#          exit-code: '1'
+#          timeout: "10m0s"
 #      - name: Post release PR
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
