Update stable versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,8 +41,8 @@ stdlibCacheVersion=3.8.0
 stdlibFileVersion=1.10.0
 stdlibFtpVersion=2.11.0
 stdlibMimeVersion=2.10.1
-stdlibTcpVersion=1.11.2-20241119-113000-29fcf4f
-stdlibUdpVersion=1.11.1-20241119-113100-89da388
+stdlibTcpVersion=1.11.2
+stdlibUdpVersion=1.11.1
 stdlibUuidVersion=1.8.0
 
 # Stdlib Level 04
@@ -58,14 +58,14 @@ stdlibTomlVersion=0.6.0
 stdlibYamlVersion=0.6.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.12.3-20241119-105900-c2ff85d
+stdlibHttpVersion=2.12.3
 
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.12.2-20241119-105900-e8575e3
+stdlibGrpcVersion=1.12.2
 stdlibSoapVersion=1.1.0
 stdlibTransactionVersion=1.10.0
-stdlibWebsocketVersion=2.12.1-20241119-110000-36284e8
+stdlibWebsocketVersion=2.12.1
 stdlibWebsubVersion=2.12.0
 stdlibWebsubhubVersion=1.12.0
 
