--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.2
+ballerinaLangVersion=2201.10.3-20241119-221400-3c4559ca
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
