--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.3-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.3-20241119-221400-3c4559ca
+ballerinaLangVersion=2201.10.3
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -90,7 +90,7 @@ graphqlToolVersion=0.11.0
 protocToolVersion=0.3.1
 
 # OpenAPI Module
-openapiToolVersion=2.1.1-20241120-101100-40d7c39
+openapiToolVersion=2.1.1
 
 # AsyncAPI Module
 asyncapiToolVersion=0.9.0
