--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.6-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.5
+ballerinaLangVersion=2201.9.6-20241126-132400-6d946a2a
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -88,7 +88,7 @@ graphqlToolVersion=0.10.0
 protocToolVersion=0.3.1
 
 # OpenAPI Module
-openapiToolVersion=2.0.3
+openapiToolVersion=2.0.4-20241126-160900-7f5c1d7
 
 # AsyncAPI Module
 asyncapiToolVersion=0.8.0
