Update dev-tools version

--- a/gradle.properties
+++ b/gradle.properties
@@ -77,7 +77,7 @@ stdlibSqlVersion=1.15.0-20241116-124800-0bc6a40
 persistToolVersion=1.4.0
 
 # Dev Tools
-devToolsVersion=1.5.0
+devToolsVersion=2.0.0-20241128-132700-112f36c
 ballerinaCommandVersion=1.4.3
 
 # API Doc UI
